--- a/crfsuite4j/pom.xml
+++ b/crfsuite4j/pom.xml
@@ -78,4 +78,17 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+	
+	<distributionManagement>
+		<repository>
+			<id>cll.artifactory</id>
+			<url>http://cll.niimm.ksu.ru:8080/artifactory/libs-releases-local</url>
+			<name>CLL maven repository</name>
+		</repository>
+		<snapshotRepository>
+			<id>cll.artifactory</id>
+			<url>http://cll.niimm.ksu.ru:8080/artifactory/libs-snapshots-local</url>
+			<name>CLL maven repository</name>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
