added scm-connection to Github

--- a/crfsuite4j/pom.xml
+++ b/crfsuite4j/pom.xml
@@ -91,4 +91,8 @@
 			<name>CLL maven repository</name>
 		</snapshotRepository>
 	</distributionManagement>
+	
+	<scm>
+		<developerConnection>scm:git:https://github.com/rgareev/crfsuite4j.git</developerConnection>
+	</scm>
 </project>
