--- a/crfsuite4j/pom.xml
+++ b/crfsuite4j/pom.xml
@@ -100,6 +100,6 @@
 	</distributionManagement>
 	
 	<scm>
-		<developerConnection>scm:git:https://github.com/rgareev/crfsuite4j.git</developerConnection>
+		<developerConnection>scm:git:git@github.com:rgareev/crfsuite4j.git</developerConnection>
 	</scm>
 </project>
