added Travis after-script: mvn deploy into CLL OSS artifactory

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,6 @@ before_install:
   - export JAVA_HOME=/usr/lib/jvm/java-7-openjdk-amd64
   - cd crfsuite-jni && make
   - cd ../crfsuite4j
+
+after_success:
+  - mvn deploy --settings ../ci-tools/maven/settings.xml -Dmaven.test.skip=true
