--- a/crfsuite4j/pom.xml
+++ b/crfsuite4j/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>ru.kfu.itis.issst.crfsuite4j</groupId>
 	<artifactId>crfsuite4j</artifactId>
 	<packaging>jar</packaging>
-	<version>0.2</version>
+	<version>0.3-SNAPSHOT</version>
 	<name>CRFSuite Java Wrapper</name>
 
 	<build>
